--- a/src/VisualStudioExtension/Strings/it-IT/Resources.resw
+++ b/src/VisualStudioExtension/Strings/it-IT/Resources.resw
@@ -136,4 +136,16 @@
     <value>{0}: {1}</value>
     <comment>{0} is the Visual Studio instance name, {1} is the path</comment>
   </data>
+  <data name="Setting_ExcludedVersions_Description" xml:space="preserve">
+    <value>Aggiungi più versioni separate da uno spazio. Esempio: 2019 2022</value>
+  </data>
+  <data name="Setting_ExcludedVersions_Label" xml:space="preserve">
+    <value>Versioni escluse</value>
+  </data>
+  <data name="Setting_ShowPrerelease_Description" xml:space="preserve">
+    <value>Includi i risultati dalle prerelease</value>
+  </data>
+  <data name="Setting_ShowPrerelease_Label" xml:space="preserve">
+    <value>Mostra prerelease</value>
+  </data>
 </root>
