--- a/src/VisualStudioExtension/Strings/en-US/Resources.resw
+++ b/src/VisualStudioExtension/Strings/en-US/Resources.resw
@@ -136,6 +136,9 @@
     <value>{0}: {1}</value>
     <comment>{0} is the Visual Studio instance name, {1} is the path</comment>
   </data>
+  <data name="Settings" xml:space="preserve">
+    <value>Settings</value>
+  </data>
   <data name="Setting_ExcludedVersions_Description" xml:space="preserve">
     <value>Add multiple versions separated by space. Example: 2019 2022</value>
   </data>
