--- a/src/VisualStudioExtension/Strings/it-IT/Resources.resw
+++ b/src/VisualStudioExtension/Strings/it-IT/Resources.resw
@@ -136,6 +136,9 @@
     <value>{0}: {1}</value>
     <comment>{0} is the Visual Studio instance name, {1} is the path</comment>
   </data>
+  <data name="Settings" xml:space="preserve">
+    <value>Impostazioni</value>
+  </data>
   <data name="Setting_ExcludedVersions_Description" xml:space="preserve">
     <value>Aggiungi più versioni separate da uno spazio. Esempio: 2019 2022</value>
   </data>
