use dynamiclist page

--- a/src/EdgeFavoritesExtension/Strings/en-US/Resources.resw
+++ b/src/EdgeFavoritesExtension/Strings/en-US/Resources.resw
@@ -138,6 +138,9 @@
   <data name="Command_OpenWindow" xml:space="preserve">
     <value>Open in new window</value>
   </data>
+  <data name="Description" xml:space="preserve">
+    <value>Opens Microsoft Edge Favorites</value>
+  </data>
   <data name="FavoriteResult_Profile_Subtitle" xml:space="preserve">
     <value>Favorite: {0} - {1}</value>
     <comment>{0} is the favorite path, {1} is the profile name</comment>
