--- a/src/VisualStudioExtension/Strings/en-US/Resources.resw
+++ b/src/VisualStudioExtension/Strings/en-US/Resources.resw
@@ -140,10 +140,13 @@
     <value>Settings</value>
   </data>
   <data name="Setting_ExcludedVersions_Description" xml:space="preserve">
-    <value>Add multiple versions separated by space. Example: 2019 2022</value>
+    <value>Add multiple versions separated by space</value>
   </data>
   <data name="Setting_ExcludedVersions_Label" xml:space="preserve">
     <value>Excluded versions</value>
+  </data>
+  <data name="Setting_ExcludedVersions_Placeholder" xml:space="preserve">
+    <value>Example: 2019 2022</value>
   </data>
   <data name="Setting_ShowPrerelease_Description" xml:space="preserve">
     <value>Include results from prerelease</value>
