--- a/src/EdgeFavoritesExtension/Strings/en-US/Resources.resw
+++ b/src/EdgeFavoritesExtension/Strings/en-US/Resources.resw
@@ -160,7 +160,49 @@
   <data name="Name" xml:space="preserve">
     <value>Edge Favorites</value>
   </data>
+  <data name="SearchMode_Flat" xml:space="preserve">
+    <value>Flat (favorites and folders)</value>
+  </data>
+  <data name="SearchMode_FlatFavorites" xml:space="preserve">
+    <value>Flat (favorites only)</value>
+  </data>
+  <data name="SearchMode_Tree" xml:space="preserve">
+    <value>Tree</value>
+  </data>
   <data name="Settings" xml:space="preserve">
     <value>Settings</value>
+  </data>
+  <data name="Setting_ExcludedProfiles_Label" xml:space="preserve">
+    <value>Excluded profiles</value>
+  </data>
+  <data name="Setting_Channel_Description" xml:space="preserve">
+    <value>Select the channel to use</value>
+  </data>
+  <data name="Setting_SearchMode_Description" xml:space="preserve">
+    <value>Specify how favorites are searched</value>
+  </data>
+  <data name="Setting_SearchMode_Label" xml:space="preserve">
+    <value>Search mode</value>
+  </data>
+  <data name="Setting_ExcludedProfiles_Description" xml:space="preserve">
+    <value>Prevents favorites from the specified profiles to be loaded, add one profile per line</value>
+  </data>
+  <data name="Setting_Channel_Label" xml:space="preserve">
+    <value>Channel</value>
+  </data>
+  <data name="Channel_Stable" xml:space="preserve">
+    <value>Stable</value>
+  </data>
+  <data name="Channel_Beta" xml:space="preserve">
+    <value>Beta</value>
+  </data>
+  <data name="Channel_Dev" xml:space="preserve">
+    <value>Dev</value>
+  </data>
+  <data name="Channel_Canary" xml:space="preserve">
+    <value>Canary</value>
+  </data>
+  <data name="Setting_ExcludedProfiles_Placeholder" xml:space="preserve">
+    <value>Example: Personal</value>
   </data>
 </root>
