--- a/src/VisualStudioExtension/Strings/en-US/Resources.resw
+++ b/src/VisualStudioExtension/Strings/en-US/Resources.resw
@@ -133,7 +133,7 @@
     <value>Visual Studio</value>
   </data>
   <data name="Result_Subtitle" xml:space="preserve">
-    <value>{0}: {1}</value>
+    <value>{0} - {1}</value>
     <comment>{0} is the Visual Studio instance name, {1} is the path</comment>
   </data>
   <data name="Settings" xml:space="preserve">
@@ -154,10 +154,10 @@
   <data name="Setting_ShowPrerelease_Label" xml:space="preserve">
     <value>Show prerelease</value>
   </data>
-  <data name="Setting_SortDate_Description" xml:space="preserve">
-    <value>Show results sorted by date</value>
+  <data name="Setting_SortLastUsed_Description" xml:space="preserve">
+    <value>Show most recently used results first</value>
   </data>
-  <data name="Setting_SortDate_Label" xml:space="preserve">
-    <value>Sort by date</value>
+  <data name="Setting_SortLastUsed_Label" xml:space="preserve">
+    <value>Sort by last used</value>
   </data>
 </root>
